--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 <div id="time-left">25:00</div>
                 <div class="d-flex fix-buttons">
                     <div class="btn-radius"><button id="start_stop" onclick="startStop()"> <i class="bi bi-caret-right"></i> </button></div>           
-                    <div class="btn-radius"><button id="reset" onclick="reset()"> <i class="bi bi-arrow-clockwise"></i> </button></div>    
+                    <div class="btn-radius"><button id="reset" onclick="reset()"> <i class="bi bi-arrow-clockwise"></i> </button></div>
+                    <audio id="pomoAlarm" src="aud/mixkit-alert-quick-chime-766.wav"></audio>   
                 </div>
             </div>
         </section>
