:sparkles: feat: Done successfully, we now have a sidebar

--- a/index.html
+++ b/index.html
@@ -11,8 +11,26 @@
     </head>
     <body>
         <header>
-            <nav>
-                <button><i class="bi bi-list"></i></button>
+            <nav >
+                <div class="exp-action-nav">
+                    <i id="exp-action" onclick="actionHamburger()" class="bi bi-list"></i>
+                </div>
+                <div id="sidebar" class="off">
+                    <div class="body-action-nav">
+                        <ul>
+                            <li>
+                                <a href="" >About us</a>
+                            </li>
+                            <li>
+                                <a href=""><span class="anotherFontPLS">C</span>ontact us</a>
+                            </li>
+                            <li>
+                                <a href=""><span class="anotherFontPLS">D</span>onate us</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                
             </nav>
         </header>
         <section class="text-white row">
