:sparkles: feat: all pages finished

--- a/html/about-us.html
+++ b/html/about-us.html
@@ -60,6 +60,12 @@
                 <img src="../img/book-lover.svg" alt="girl reading books">
             </article>
         </section>
+        <section>
+            <article class="article-box">
+                <h2>Tutorial</h2>
+            </article>
+            <img src="../img/tutorial.png" alt="tutorial">
+        </section>
         <section class="donate-section">
             <article class="article-box">
                 <h2 id="donate">Donate</h2>
@@ -76,6 +82,15 @@
                 </a>
             </article>
         </section>
+        <footer>
+            <img src="../img/wave.svg" alt="waves">
+            <div class="body-footer">
+                <p>
+                    &copy; All rights reserved to 
+                    <a target="_blank" href="https://github.com/FelixClone">FelixClone</a>
+                </p>
+            </div>
+        </footer>
         
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
