--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                     <a href="html/about-us.html" >About</a>
                                 </li>
                                 <li>
-                                    <a href=""><span class="anotherFontPLS">C</span>ontact us</a>
+                                    <a href="mailto:contato.valtsdigital@protonmail.com?subject=Pomoeclipse&body=Hello i wanna talk about pomoeclipse"><span class="anotherFontPLS">C</span>ontact us</a>
                                 </li>
                                 <li>
                                     <a href="html/about-us.html#donate"><span class="anotherFontPLS">D</span>onate</a>
