--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
         </header>
         <section class="pomodoro text-white row">
             <div class="timer">
-                <div id="timer-label" class="mb-4">Working</div>
-                <div class="eclipse-time">
+                <div id="timer-label">Working</div>
+                
+                <div class="mt-4 eclipse-time">
                     <div class="eclipse-time-inner">
                         <svg  id="reset">
                             <circle cx="70" cy="70" r="70"></circle>
@@ -45,12 +46,18 @@
                         </svg>
                     </div>
                 </div>
+                <i class="bi bi-circle-fill"></i>
+                <i class="bi bi-circle-fill"></i>
+                <i class="bi bi-circle-fill"></i>
+                <i class="bi bi-circle-fill"></i>
                 <div id="time-left">25:00</div>
+                
                 <div class="d-flex fix-buttons">
-                    <div class="btn-radius"><button id="start_stop" onclick="startStop()"> <i id="playerPause" class="bi bi-caret-right"></i> </button></div>
+                    <div class="btn-radius"><button id="start_stop" onclick="startStop()" ondblclick="skip()"> <i id="playerPause" class="bi bi-caret-right"></i> </button></div>
                     <audio id="pomoAlarm" src="aud/mixkit-alert-quick-chime-766.wav"></audio>
                     <audio id="audReset" src="aud/mixkit-explainer-video-game-alert-sweep-236.wav"></audio>
-                    <audio id="audStartStop" src="aud/mixkit-cool-interface-click-tone-2568.wav"></audio>              
+                    <audio id="audStartStop" src="aud/mixkit-cool-interface-click-tone-2568.wav"></audio>
+                    <audio id="audSkip" src="aud/mixkit-video-game-spin-jump-2648.wav"></audio>             
                 </div>
             </div>
         </section>
