:recycle: refactor: some comments have been added in situations where the names of functions and variables do not explain themselves

--- a/html/about-us.html
+++ b/html/about-us.html
@@ -70,7 +70,7 @@
             <article class="article-box">
                 <h2 id="donate">Donate</h2>
                 <p class="big-text">
-                    By clicking on this button, you'll help a junior Latin American developer consume his daily coffee. 
+                    By clicking on this button, you'll help a junior latin american developer consume his daily coffee. 
                 </p>
                 <p class="smile-face">
                     (:
